# gtravyl

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
docs/source/: conf.py  example.rst  index.rst
src/gtravyl/: __init__.py
tests/: test_basic.py
