[project]
name = "gtravyl"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "csumnicht@berkeley.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "sphinx>=9.0.4",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "sphinx>=9.0.4",
    "sphinx-automodapi>=0.22.0",
]
